# midas-journal-843

PointInCircle/: CMakeLists.txt  IsPointInCircle.cxx  itkPointInCircleGeometricalPredicateFunctor.h  predicates.c
